# SOLVER

./: .clang-format  .clang-format-llvm  .gitignore  CHANGELOG.md  CMakeLists.txt  DESIGN.md  LICENSE  NOTES.md  README.md  SIMPLIFY.md  SOME.md  TEMP.md  build.bat  build.sh  build_config.json  requirements.txt  setup.py  test  test.cpp  test_suites.json  tok.py
.github/workflows/: build-release.yml  ci.yml
Examples/: ast_vs_postfix.py  benchmark.py  comparisson.py  contour.py  data.py  ex.py  example.py  logger.py  one_dimension_eval.py  report.py  simple.py  simple_expressions.py  tester.py  two_dimension_eval.py
Examples/lib/: solver.py
Examples/solver/: _solver.pyi
SOLVER/: CMakeLists.txt  solver.i  solver.swig
SOLVER/src/: Debug.h  Exception.h  ExprNode.h  ExprTree.cpp  ExprTree.h  Function.h  SOLVER.h  Solver.cpp  SymbolTable.cpp  SymbolTable.h  Token.h  Tokenizer.cpp  Utils.cpp  Validator.cpp  Validator.h  pch.h
SOLVER/src/Core/: ExprNode.h  ExprTree.cpp  ExprTree.h  Function.h  ShuntingYard.cpp  Solver.cpp  Solver.h  SymbolTable.cpp  SymbolTable.h  Token.h  Tokenizer.cpp  Utils.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
Solver/: CMakeLists.txt  solver.i
Solver/src/: Debug.cpp  Debug.h  ExprNode.h  ExprTree.cpp  ExprTree.h  Function.h  LRUCache.h  MemoryPool.h  MultiPassSimplifier.cpp  MultiPassSimplifier.h  Simplification.cpp  Simplification.h  Solver.cpp  Solver.h  SymbolTable.cpp  SymbolTable.h  Token.h  Tokenizer.cpp  Tokenizer.h  Utils.cpp  Validator.h  pch.h
bindings/: bindings.h  solver_bindings.cpp  solver_module.cpp
include/: LRU_cache.h  ast.h  compile.h  compiler.h  config.h  debug.h  docstrings.h  exception.h  expr_node.h  expr_tree.h  function.h  misc.h  multi_pass_simplifier.h  pch.h  postfix.h  simplification.h  solver.h  symbol_table.h  token.h  tokenizer.h  tokenizer_new.h
include/simplification/: simplification_engine.h
include/simplification/rules/: add_zero_rule.h  associative_add_rule.h  associative_mult_rule.h  constant_folding_rule.h  div_one_rule.h  function_folding_rule.h  mult_one_rule.h  mult_zero_rule.h  simplification_rule.h  sub_zero_rule.h
src/: Postfix.cpp  ast.cpp  compile.cpp  compiler.cpp  debug.cpp  expr_tree.cpp  misc.cpp  multi_pass_simplifier.cpp  postfix.cpp  simplification.cpp  solver.cpp  symbol_table.cpp  tokenizer.cpp  utils.cpp  validator.cpp
src/simplification/: simplification_engine.cpp
src/simplification/rules/: add_zero_rule.cpp  associative_add_rule.cpp  associative_mult_rule.cpp  constant_folding_rule.cpp  div_one_rule.cpp  function_folding_rule.cpp  mult_one_rule.cpp  mult_zero_rule.cpp  sub_zero_rule.cpp
tests/: conftest.py  test_builtins.py  test_complex_expressions.py  test_unary_minus.py  test_variables.py
tests/python/: test_builtins.py  test_custom_functions.py  test_error_handling.py
tests/solver/: __init__.py  _solver.pyi
tools/: build_config.schema.json  commands.py  format.cmake  generate_pyi.py  generate_stub.py  logger.py  mkdoc.py  parse_config.py
tools/stubgen/: __init__.py  printer.py  writer.py
tools/stubgen/parser/: errors.py  interface.py
tools/stubgen/parser/mixins/: error_handlers.py  filter.py  fix.py  parse.py
